# CMakeExample

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.c
src/model/: CMakeLists.txt  model.c  model.h
src/view/: CMakeLists.txt  view.c  view.h
